# ai-financial-model

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml
config/companies/: amzn.yaml
coverage/amzn/: config.yaml
data/: README.md
data/industry/: README.md  retail_general.yaml
data/litigation/ftc_v_amzn/: README.md
data/macro_inputs/: README.md  us_default.yaml
docs/: demo-pipeline-extension.md
scripts/: build_template.py  refresh_industry_damodaran.py  refresh_macro_fred.py  seed_data.py
src/ai_financial_model/: __init__.py  cli.py  llm.py  pipeline.py  schema.py
src/ai_financial_model/generation/: __init__.py  mapping.py  populator.py
src/ai_financial_model/ingestion/: __init__.py  base.py  earnings_release.py  form4.py  industry.py  macro.py  non_recurring.py  sec_10k.py  sec_10q.py  sec_xbrl.py
src/ai_financial_model/validation/: __init__.py  checks.py  report.py
templates/: valuation_template.xlsx
tests/: test_earnings_release_llm.py  test_mapping.py  test_non_recurring.py  test_pipeline.py  test_populator.py
