[project]
name = "ai-financial-model"
version = "0.1.0"
description = "Pipeline that ingests company documents and emits a populated valuation model with provenance and reconciliation flags."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pydantic>=2.6",
    "click>=8.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
aifm = "ai_financial_model.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_financial_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
